--- a/style-425.css
+++ b/style-425.css
@@ -64,5 +64,33 @@
         padding-bottom: 30px;
         font-size: 60px;
     }
+
+    #div-2{
+        padding-bottom: 0;
+    }
+
+    #div-3{
+        padding-top: 0px;
+    }
     
+    #div-3 > form{
+        flex-direction: column;
+        width: 90%;
+        padding: 30px;
+    }
+
+    #div-3 > form > input{
+        margin-right: 0;
+        margin-bottom: 20px;
+        padding: 10px 20px;
+    }
+
+    #div-3 > form > input:nth-child(4){
+        margin-bottom: 0;    
+    }
+
+    #footer, #footer > #yash{
+        font-size: 11px;
+        box-shadow: 0px 3px 0px var(--color-6-1);
+    }
 }
