--- a/style.css
+++ b/style.css
@@ -339,3 +339,69 @@ header{
     font-weight: 600;
     color: var(--color-5-1);
 }
+
+#div-3{
+    width: 100%;
+    min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#div-3 > p{
+    color: var(--color-3);
+    align-self: flex-start;
+    margin-left: 10%;
+    padding: 10px;
+}
+
+#div-3 > form{
+    width: 80%;
+    background: var(--color-1);
+    padding: 30px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#div-3 > form > input{
+    font-family: "Sofia Pro", sans-serif;
+    outline: none;
+    padding: 10px;
+    border: none;
+    font-size: 15px;
+    background: var(--color-5-1);
+    color: var(--color-3);
+    border-radius: 5px;
+    width: 100%;
+    margin-right: 15px;
+}
+
+#div-3 > form > input:nth-child(4){
+    margin-right: 0;
+    cursor: pointer;
+    background: var(--color-11);
+}
+
+#footer{
+    width: 100%;
+    padding: 40px 10%;
+    color: var(--color-4);
+    z-index: 1000000;
+}
+
+#footer > #yash{
+    transition: 1s ease;
+    background: var(--color-6);
+    padding: 5px;
+    color: var(--white);
+    margin-left: 5px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 0px var(--color-6-1);
+    cursor: pointer;
+    white-space: nowrap;
+    font-size: 15px;
+}
