--- a/style-425.css
+++ b/style-425.css
@@ -81,7 +81,7 @@
 
     #div-3 > form > input{
         margin-right: 0;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
         padding: 10px 20px;
     }
 
@@ -89,8 +89,15 @@
         margin-bottom: 0;    
     }
 
+    #footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
     #footer, #footer > #yash{
-        font-size: 11px;
+        font-size: 10px;
         box-shadow: 0px 3px 0px var(--color-6-1);
     }
 }
