--- a/style-425.css
+++ b/style-425.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 2 version
+*/
+
 @media (max-width:425px) {
 
     #div-1{
@@ -5,8 +12,13 @@
     }
 
     #youtube-wrap{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         width: 90%;
     }
 
@@ -43,6 +55,7 @@
 
     #div-2{
         padding: 50px 5% 50px 5%;
+        -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
         gap: 0;
     }
@@ -74,7 +87,10 @@
     }
     
     #div-3 > form{
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         width: 90%;
         padding: 30px;
     }
@@ -90,14 +106,24 @@
     }
 
     #footer{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     #footer, #footer > #yash{
         font-size: 10px;
-        box-shadow: 0px 3px 0px var(--color-6-1);
+        -webkit-box-shadow: 0px 3px 0px var(--color-6-1);
+                box-shadow: 0px 3px 0px var(--color-6-1);
     }
 }
