--- a/stats/style.css
+++ b/stats/style.css
@@ -1,12 +1,19 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 2 version
+*/
+
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none; 
-     -khtml-user-select: none; 
        -moz-user-select: none; 
         -ms-user-select: none; 
             user-select: none; 
@@ -55,9 +62,16 @@ body{
     padding: 50px 20% 50px 20%;
     line-height: 28px;
     font-size: 16px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 input[type=number]::-webkit-inner-spin-button, 
@@ -72,21 +86,26 @@ input[type=number]::-webkit-outer-spin-button {
 
 #div-1 > #update-div{
     padding: 5px 30px;
+    width: -webkit-max-content;
+    width: -moz-max-content;
     width: max-content;
     background: var(--color-5);
     color: var(--white);
     border-radius: 10px;
-    box-shadow: 0px 5px 0px var(--color-5-1);
+    -webkit-box-shadow: 0px 5px 0px var(--color-5-1);
+            box-shadow: 0px 5px 0px var(--color-5-1);
     font-weight: 600;
     border: none;
     outline: none;
     margin-top: 10px;
+    -webkit-transition: 0.1s ease;
     transition: 0.1s ease;
     cursor: pointer;
 }
 
 #div-1 > #update-div:active{
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     translate: 0px 5px;
 }
 
@@ -97,9 +116,15 @@ input[type=number]::-webkit-outer-spin-button {
 
 #div-2{
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .card{
@@ -142,11 +167,14 @@ input[type=number]::-webkit-outer-spin-button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    box-shadow: 0px 5px 0px var(--color-5);
+    -webkit-box-shadow: 0px 5px 0px var(--color-5);
+            box-shadow: 0px 5px 0px var(--color-5);
+    -webkit-transition: 0.1s ease;
     transition: 0.1s ease;
 }
 
 .p-4-1:focus, .p-4-2:focus, .p-4-1:active, .p-4-2:active{
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     translate: 0px 5px;
 }
