--- a/biography/style-425.css
+++ b/biography/style-425.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 2 version
+*/
+
 @media (max-width:425px){
 
     body{
@@ -17,7 +24,10 @@
     }
 
     .p-img-div{
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
 
     .p-img-div > img{
