--- a/style-425.css
+++ b/style-425.css
@@ -83,7 +83,8 @@
     }
 
     #div-3{
-        padding-top: 0px;
+        padding-top: 10px;
+        /* padding: 10px; */
     }
     
     #div-3 > form{
@@ -92,13 +93,15 @@
             -ms-flex-direction: column;
                 flex-direction: column;
         width: 90%;
-        padding: 30px;
+        padding: 50px 30px;
+        display: flex;
+        gap: 10px;
     }
 
     #div-3 > form > input{
         margin-right: 0;
         margin-bottom: 15px;
-        padding: 10px 20px;
+        padding: 15px 20px;
     }
 
     #div-3 > form > input:nth-child(4){
